--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>Sprunktml</title>
 </head>
 <body>
-<iframe src="blob:https://packager.turbowarp.org/29474a28-61b2-4509-878f-2d5d028d2dad#do-not-share-this-link-it-will-not-work-for-others" width="480" height="360" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="Sprunki.html" width="480" height="360" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 </html>
