--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>Sprunktml</title>
 </head>
 <body>
-<iframe src="Sprunki.html" width="480" height="360" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<center><iframe src="Sprunki.html" width="480" height="360" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
 </body>
 </html>
