--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>Sprunktml</title>
 </head>
 <body>
-<center><iframe src="Sprunki.html" width="980" height="720" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
+<center><iframe style="border: 0;" src="https://file.garden/Zdko1-gxzVCR-6XW/Sprunki.html" width="980" height="720"></iframe></center>
 </body>
 </html>
